# nfc-bead

./: .gitignore  CLAUDE.md  GUIDE.md  README.md  SETUP.md  build_charm.py.example  pyproject.toml
.claude/: settings.json
.claude/skills/bead-architect-mode/: SKILL.md  anim_locked_profile.py  anim_macro_pull.py  anim_orbit.py  anim_raking_light.py  anim_switch.py  anim_top_down.py  anim_tour.py  architect_off.py  architect_on.py  auto_cycle.py  highlight_features.py
.claude/skills/bead-architect-mode/legacy/: master_architect.py  technical_diagram.py
.claude/skills/bead-build/: SKILL.md
.claude/skills/bead-debug-colors/: SKILL.md  anim_macro_pull.py  architect_on.py  blueprint.py  recolor.py
.claude/skills/bead-debug-overlays/: SKILL.md  recolor.py  restore.py
.claude/skills/bead-printability-check/: SKILL.md
.claude/skills/bead-stl-export/: SKILL.md  export.py
.claude/skills/image-to-silhouette/: SKILL.md
.claude/skills/nfc-bead/: SKILL.md
.claude/skills/theater-mode/: SKILL.md
beads/black-rainbow/: PRINT_LOG.md  README.md  build_black_rainbow.py  bundle_3mf.py  extract_regions.py  regions.json
beads/black-rainbow/print/: Bottom.stl  DecorationRainbowInner.stl  DecorationRainbowMid.stl  DecorationRainbowOuter.stl  DecorationWings.stl  Top.stl  black-rainbow.3mf  black-rainbow_charm.blend
beads/eye-medallion/: PRINT_LOG.md  README.md  build_eye_medallion.py
beads/eye-medallion/print/: Bottom.stl  DecorationIris.stl  DecorationOutline.stl  DecorationPupil.stl  eye_medallion.3mf  eye_medallion.blend
beads/filibertos-taco/: PRINT_LOG.md  README.md  build_filibertos_taco.py  bundle_3mf.py  check_pegs.py  extract_regions.py  extract_strokes.py  find_pegs.py  region_palette.txt  regions.json
beads/filibertos-taco/print/: Bottom.stl  Decoration.stl  DecorationGreen.stl  DecorationLettuceDark.stl  DecorationLettuceLight.stl  DecorationOutline.stl  DecorationRed.stl  DecorationShellDark.stl  DecorationYellow.stl  Top.stl  filibertos-taco-flush.3mf  filibertos-taco.3mf  filibertos-taco_charm.blend
beads/filibertos-taco/print/blocks/: Bottom.stl  Decoration.stl  DecorationFilling.stl  DecorationInteriorDetail.stl  DecorationLettuceSeparator.stl  (+9 more)
beads/filibertos-taco/stages/: 01_built_verified.blend  02_v3_4color.blend  03_v4_neon.blend  04_v4b_neon_continuous.blend  05_v4c_neon_taco.blend  06_v5_blocks.blend  07_v6_blocks_2color.blend  08_v6_1_smoothed_filling.blend  08_v6_2_inset_filling.blend  09_v7_thicker_rim.blend  10_v8_yclamp_filling.blend  11_v8_bottom_trim.blend  12_v9_logo_ratio.blend  13_v10_interior_detail.blend  13_v10_with_veins.blend  14_v10_interior_v15b.blend  15_v11_polygon_pipeline.blend  16_v12_with_red_outline.blend  17_v13_full_design.blend  18_v13_3veins_print.blend  19_v14_no_zfight.blend  20_v15_nfc_y_bumped.blend
beads/fire-heart/: README.md  build_fire_heart.py  bundle_3mf.py  extract_fireheart.py  measure_cleft.py  regions.json
beads/fire-heart/print/: BottomHeart.stl  BottomOrange.stl  BottomRed.stl  TopHeart.stl  TopOrange.stl  TopRed.stl  fire-heart.3mf  fire-heart_charm.blend
beads/gymnast-medallion/: README.md  _render_face.py  build_gymnast_medallion.py  extract_figure.py  figure.json
beads/gymnast-medallion/print/: Bottom.stl  Decoration.stl  Top.stl  gymnast_medallion.3mf  gymnast_medallion.blend
beads/gymnasts/: README.md  build_gymnasts.py  bundle_3mf.py  extract_gymnasts.py  gymnasts.blend  gymnasts_thread.blend  regions.json
beads/gymnasts/print/: gymnasts.3mf  pose1.stl  pose2.stl  pose3.stl  pose4.stl  pose5.stl  pose6.stl
beads/gymnasts/print_thread/: gymnasts_thread.3mf  pose1.stl  pose2.stl  pose3.stl  pose4.stl  pose5.stl  pose6.stl
beads/redaphid-medallion/: README.md  build_redaphid_medallion.py  figure.json  parse_silhouette.py
beads/redaphid-medallion/print/: Decoration.stl  Top.stl  redaphid_medallion.3mf  redaphid_medallion.blend
beads/redaphid-portrait/: PRINT_LOG.md  README.md  build_redaphid.py  extract_silhouette.py  redaphid-portrait.blend
beads/redaphid-portrait-v2/: README.md  build_redaphid.py  extract_silhouette.py  redaphid-portrait.blend
beads/redaphid-portrait-v2/print/: Bottom.stl  Decoration.stl  Hair.stl  Top.stl  redaphid-portrait-v2.3mf
beads/redaphid-portrait-v2/stages/: 01_built.blend
beads/redaphid-portrait/print/: Bottom.stl  Decoration.stl  DecorationBack.stl  FILAMENTS.md  Hair.stl  HairBack.stl  Top.stl  bottom-v5b.3mf  bottom-v5c.3mf  bottom.3mf  colored.3mf  redaphid-portrait-1side.3mf  redaphid-portrait-top.3mf  redaphid-portrait.3mf  top-v5.3mf  top-v5b-1stlayer.3mf  top-v5b.3mf  top-v5c.3mf  top-v6.3mf  top-v6b.3mf  top.3mf  working.3mf
beads/redaphid-portrait/stages/: 01_built.blend  02_exported.blend  03_user_edits.blend
beads/rezz/: DEBUGGING_LOG.md  README.md  build_rezz.py
beads/rezz/print/: rezz_bottom.stl  rezz_charm.blend  rezz_charm.blend1  rezz_top_body.stl  rezz_top_spiral.stl
beads/rezz/stages/: 01_initial_build.blend  01_initial_build.md  01_silhouette_flat.blend  02_extruded.blend  03_string_hole.blend  04_split.blend  05_nfc_pocket.blend  06_peg_holes.blend  07_pegs.blend  08_spiral.blend  09_positioned.blend
beads/robot/: PRINT_LOG.md  README.md  build_robot.py
beads/robot/print/: Bottom.stl  Decoration.stl  Top.stl  robot.3mf  robot_charm.blend
journals/architect-aesthetic/iter_01_palette_only/: notes.md
journals/architect-aesthetic/iter_02_with_ink_lines/: notes.md
journals/architect-aesthetic/iter_03_ink_tuning/: notes.md
journals/architect-aesthetic/iter_04_graph_paper/: notes.md
journals/architect-aesthetic/iter_05_camera_vocab/: notes.md
journals/architect-aesthetic/iter_05_floating/: PIVOT.md
journals/architect-aesthetic/iter_06_floating_exploded/: notes.md
journals/architect-aesthetic/iter_07_anim_test/: notes.md
print/: PRINT_GUIDE.md
prompts/nfc-bead/: prompt.md
samples/: rezz_sample.blend
tools/: anim_switch.py  bead_build.py  blender_bootstrap.py  blender_send.py  build_3mf.py  build_rezz_3mf.py  image_to_silhouette.py  launch.ps1  make_3mf.py  printability_check.py  verify_stls.py
(+11 files in other folders)
