[project]
name = "nfc-bead"
version = "0.1.0"
description = "NFC bead/charm pipeline — Blender 5.0 build, architect-mode aesthetic, multi-color STL/3MF export for Centauri Carbon 2"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Core mesh manipulation: STL/OBJ load, manifold checks, bbox, repair.
    # Industry-standard.
    "trimesh>=4.12",
    "numpy>=1.26",
    # Official 3MF Consortium library — produces slicer-loadable 3MF
    # (Bambu Studio / Elegoo Slicer / Prusa Slicer all read this).
    "lib3mf>=2.5",
    # Robust manifold repair / boolean ops. Optional but cheap.
    "manifold3d>=3.4",
    # Pillow for any incidental image work (PNG plate previews in 3MF, etc.)
    "pillow>=10",
    "scipy>=1.17.1",
    "scikit-image>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.scripts]
# Talk to a running Blender via the BlenderMCP socket addon (works whether or
# not Claude Code's MCP layer is connected).
nfc-blender-send  = "tools.blender_send:main"
# Validate the latest STL set (manifold, dimensions, alignment).
nfc-verify-stls   = "tools.verify_stls:main"
# Generic STL → 3MF Consortium bundle (no slicer-specific config; useful when
# you don't have an Elegoo Slicer template handy).
nfc-make-3mf      = "tools.make_3mf:main"
# Build a slicer-ready Bambu Studio / Elegoo Slicer 3MF for the bead with
# extruder assignments, brim/raft disabled, and printer profile preserved
# from a reference 3MF in tmp/latest/slicer_template/. Recommended path
# when you have a slicer template; falls back to nfc-make-3mf otherwise.
nfc-build-3mf     = "tools.build_3mf:main"
# Switch the live Blender scene to a stored animation (orbit, tour, etc.)
nfc-anim-switch    = "tools.anim_switch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
